--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ library for doing composable generators.</p>
   <div>npm&nbsp;install&nbsp;--save&nbsp;chance-generators</div>
 </div><h2 id="usage">Usage</h2>
 <div class="code lang-javascript">
-  <div><span style="color: #F92672">var</span>&nbsp;Generators&nbsp;<span style="color: #F92672">=</span>&nbsp;require<span style="color: #999">(</span><span style="color: #E6DB74">'chance-generators'</span><span style="color: #999">)</span></div>
+  <div>const&nbsp;Generators&nbsp;<span style="color: #F92672">=</span>&nbsp;require<span style="color: #999">(</span><span style="color: #E6DB74">'chance-generators'</span><span style="color: #999">)</span></div>
 </div><div class="code lang-javascript">
   <div><span style="color: #F92672">let</span>&nbsp;seed&nbsp;<span style="color: #F92672">=</span>&nbsp;<span style="color: #66D9EF; font-weight: bold">42</span></div>
   <div><span style="color: #F92672">let</span>&nbsp;<span style="color: #999">{</span>&nbsp;email<span style="color: #999">,</span>&nbsp;pickone&nbsp;<span style="color: #999">}</span>&nbsp;<span style="color: #F92672">=</span>&nbsp;<span style="color: #F92672">new</span>&nbsp;Generators<span style="color: #999">(</span>seed<span style="color: #999">)</span></div>
@@ -127,7 +127,7 @@ will be unwrapped.</p>
   <div>&nbsp;&nbsp;<span style="color: #999">}</span></div>
   <div><span style="color: #999">})</span></div>
 </div><h2 id="mit-license">MIT License</h2>
-<p>Copyright (c) 2016 Sune Simonsen <a href="&#109;&#x61;&#105;&#x6c;&#x74;&#x6f;&#58;&#115;&#x75;&#x6e;&#101;&#64;&#x77;&#x65;&#x2d;&#x6b;&#x6e;&#111;&#119;&#x68;&#x6f;&#119;&#x2e;&#100;&#107;">&#115;&#x75;&#x6e;&#101;&#64;&#x77;&#x65;&#x2d;&#x6b;&#x6e;&#111;&#119;&#x68;&#x6f;&#119;&#x2e;&#100;&#107;</a></p>
+<p>Copyright (c) 2016 Sune Simonsen <a href="&#109;&#97;&#x69;&#108;&#x74;&#x6f;&#58;&#115;&#x75;&#x6e;&#101;&#64;&#x77;&#x65;&#45;&#x6b;&#x6e;&#x6f;&#x77;&#x68;&#x6f;&#x77;&#x2e;&#x64;&#107;">&#115;&#x75;&#x6e;&#101;&#64;&#x77;&#x65;&#45;&#x6b;&#x6e;&#x6f;&#x77;&#x68;&#x6f;&#x77;&#x2e;&#x64;&#107;</a></p>
 <p>Permission is hereby granted, free of charge, to any person obtaining
 a copy of this software and associated documentation files (the
 &#39;Software&#39;), to deal in the Software without restriction, including
